--- a/financial-planner.ipynb
+++ b/financial-planner.ipynb
@@ -4459,7 +4459,7 @@
     "\n",
     "Investing is always a longterm strategy and any other 'quick' strategy will come with higher risks. The early retirement plan that provides the highest possible ROI for both 5- and 10-Years has a stock-to-bond ratio of 0.9:0.1. However, this comes with risks because they could also provide the lowest possible returns. The highest yielding portfolios also have the largest spread.\n",
     "\n",
-    "Looking at the data above, we can make decisions about the best portfolio for both 5- and 10-Year plans. The percent differences of the Lower Confidence Intervals for the 5-Year Plan are all lower than 10% across all trials. However, for the 10-Year plan there are a couple Lower Confidence Intervals that fall below 10%. The standard deviations of the Lower CI for both 5- and 10-Year plans are small relative to the actual data and their means (averages). As a result, I would recommend an investor interested in a 5- or 10-Year retirement plan to invest in the portfolio with a stock-to-bond ratio of 0.9:0.1."
+    "Looking at the data above, we can make decisions about the best portfolio for both 5- and 10-Year plans. The percent differences of the Lower Confidence Intervals for the 5-Year Plan are all lower than 10% across all trials, except Trial 7. However, for the 10-Year plan there are 3 Lower Confidence Intervals that are above 10%. The standard deviations of the Lower CI for both 5- and 10-Year plans are small relative to the actual data and their means (averages). As a result, I would recommend an investor interested in a 5- or 10-Year retirement plan to invest in the portfolio with a stock-to-bond ratio of 0.9:0.1."
    ]
   },
   {
