updated explanations for updated data

--- a/financial-planner.ipynb
+++ b/financial-planner.ipynb
@@ -520,47 +520,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2018-03-24'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'2023-03-24T00:00:00-04:00'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'2018-03-24T00:00:00-04:00'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set start and end dates of five years back from today.\n",
     "# Sample results may vary from the solution based on the time frame chosen\n",
     "five_yrs_ago=date-relativedelta(years=5)\n",
     "five_yrs_ago = five_yrs_ago.strftime('%Y-%m-%d')\n",
     "\n",
-    "start_date = pd.Timestamp(five_yrs_ago, tz='America/New_York').isoformat()\n",
-    "display(five_yrs_ago)\n",
-    "display(today)\n",
-    "display(start_date)"
+    "start_date = pd.Timestamp(five_yrs_ago, tz='America/New_York').isoformat()"
    ]
   },
   {
@@ -3995,7 +3964,7 @@
    "source": [
     "#### Discussion\n",
     "\n",
-    "The highest and lowest returns are found in the same trial (Trial 9) with a Bond-to-Stock ratio of 0.1:0.9. This indicates that there is a wider spread of returns in this portfolio. How wide spread are the returns vs. other trials? Let's find out..."
+    "The highest returns for both 5- and 10-Year retirement plans are found in the same trial (Trial 9) with a Bond-to-Stock ratio of 0.1:0.9. The lowest returns are found in other trials but they are very close. This indicates that there is a wider spread of returns in this portfolio. How wide spread are the returns vs. other trials? Let's find out..."
    ]
   },
   {
@@ -4449,6 +4418,38 @@
    ],
    "source": [
     "ci_10yr.pct_change()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is a 95% chance that an initial investment of $30000 in the portfolio over the next 5 years will end within in the range of $19200.0 and $72900.0\n",
+      "There is a 95% chance that an initial investment of $30000 in the portfolio over the next 10 years will end within in the range of $19200.0 and $154200.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check what an initial investment of $30k would produce for both 5- and 10-Year retirement plans\n",
+    "\n",
+    "initial_investment = 30000\n",
+    "ci_lower_5yr = round(ci_5yr_lo * initial_investment, 2)\n",
+    "ci_upper_5yr = round(ci_5yr_hi * initial_investment, 2)\n",
+    "ci_lower_10yr = round(ci_10yr_lo * initial_investment, 2)\n",
+    "ci_upper_10yr = round(ci_10yr_hi * initial_investment, 2)\n",
+    "\n",
+    "print(f\"There is a 95% chance that an initial investment of ${initial_investment} in the portfolio\"\n",
+    "      f\" over the next 5 years will end within in the range of\"\n",
+    "      f\" ${ci_lower_5yr} and ${ci_upper_5yr}\")\n",
+    "\n",
+    "print(f\"There is a 95% chance that an initial investment of ${initial_investment} in the portfolio\"\n",
+    "      f\" over the next 10 years will end within in the range of\"\n",
+    "      f\" ${ci_lower_10yr} and ${ci_upper_10yr}\")"
    ]
   },
   {
